# terminal-dashboard

./: .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  pyproject.toml  run.sh  server.py
.github/: PULL_REQUEST_TEMPLATE.md
native/: StandaloneWebView.swift  StatusBarHost.swift
scripts/: build_dmg.sh  make_menubar_icon.py
terminal_dashboard/: __init__.py  __main__.py  actions.py  app_window.py  browser.py  httpd.py  ides.py  launcher.py  models.py  preview.py  process_utils.py  scripting.py  version.py
terminal_dashboard/export/: __init__.py  agents.py  capture.py  formats.py  service.py
terminal_dashboard/scanners/: __init__.py  alacritty.py  ghostty.py  hyper.py  iterm.py  kitty.py  rio.py  tabby.py  terminal_app.py  tmux.py  vscode.py  warp.py  wezterm.py
